gen/y.output
Terminals unused in grammar

   EXTERN
   STATIC
   AUTO
   REGISTER
   SHORT
   LONG
   SIGNED
   UNSIGNED
   DOUBLE
   CONST
   VOLATILE
   ENUM
   ELLIPSIS
   CASE
   DEFAULT
   SWITCH
   DO
   FOR
   SIZEOF


State 117 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | global_statement input

    3 global_statement: declaration_statement
    4                 | type_definition
    5                 | function_definition

    6 body: body_statement body
    7     | /* empty */

    8 body_statement: declaration_statement
    9               | jump_statement
   10               | expression_statement
   11               | error
   12               | selection_statement
   13               | iterative_statement
   14               | block_statement
   15               | label_stmt
   16               | return_statement

   17 label_stmt: IDENTIFIER ':'

   18 return_statement: RETURN eval_expr ';'
   19                 | RETURN ';'

   20 function_definition: func_head block_statement

   21 func_head: res_id begin_params '(' param_decl_list ')' end_params

   22 begin_params: /* empty */

   23 end_params: /* empty */

   24 res_id: type_name IDENTIFIER

   25 param_decl_list: param_list
   26                | /* empty */

   27 param_list: param_decl
   28           | param_decl ',' param_list

   29 param_decl: type_name symbol_name

   30 block_statement: begin_sub '{' body '}' end_sub

   31 begin_sub: /* empty */

   32 end_sub: /* empty */

   33 type_definition: aliasing ';'
   34                | compound_type ';'

   35 compound_type: type_type opt_ctype_name '{' member_decl_list '}'
   36              | type_type ctype_name

   37 type_type: STRUCT
   38          | UNION

   39 ctype_name: IDENTIFIER

   40 opt_ctype_name: /* empty */
   41               | ctype_name

   42 member_decl_list: member_decl opt_member_decl_list

   43 opt_member_decl_list: /* empty */
   44                     | member_decl_list

   45 member_decl: type_name id_list ';'

   46 id_list: IDENTIFIER
   47        | IDENTIFIER ',' id_list

   48 aliasing: TYPEDEF type_name IDENTIFIER

   49 expression_statement: expr ';'
   50                     | ';'

   51 jump_statement: CONTINUE ';'
   52               | BREAK ';'
   53               | GOTO IDENTIFIER ';'

   54 iterative_statement: while_loop

   55 while_loop: while_clause body_statement

   56 while_clause: WHILE '(' expr ')'

   57 selection_statement: if_clause body_statement
   58                    | if_clause body_statement else_clause body_statement

   59 if_clause: IF '(' expr ')'

   60 else_clause: ELSE

   61 declaration_statement: type_name var_dlist ';'

   62 var_dlist: var_definition ',' var_dlist
   63          | var_definition

   64 var_definition: symbol_name opt_init

   65 symbol_name: IDENTIFIER
   66            | symbol_name '[' CONSTANT ']'
   67            | '*' symbol_name
   68            | '(' symbol_name ')'

   69 type_name: INT
   70          | FLOAT
   71          | CHAR
   72          | VOID
   73          | compound_type
   74          | ALIAS_NAME

   75 opt_init: '=' expr
   76         | /* empty */

   77 primary_expr: CONSTANT
   78             | IDENTIFIER
   79             | '(' expr ')'
   80             | function_call

   81 function_call: func_name '(' actual_params_list ')'

   82 func_name: IDENTIFIER

   83 actual_params_list: actual_params
   84                   | /* empty */

   85 actual_params: eval_expr
   86              | eval_expr ',' actual_params

   87 eval_expr: expr

   88 expr: primary_expr
   89     | expr indexing
   90     | expr '.' IDENTIFIER
   91     | '!' expr
   92     | '~' expr
   93     | '-' expr
   94     | INC_OP expr
   95     | DEC_OP expr
   96     | '(' type_name ')' expr
   97     | '*' expr
   98     | expr '*' expr
   99     | expr '/' expr
  100     | expr '%' expr
  101     | expr '+' expr
  102     | expr '-' expr
  103     | expr LSHFT_OP expr
  104     | expr RSHFT_OP expr
  105     | expr '>' expr
  106     | expr '<' expr
  107     | expr LE_OP expr
  108     | expr GE_OP expr
  109     | expr EQ_OP expr
  110     | expr NE_OP expr
  111     | expr '|' expr
  112     | expr '^' expr
  113     | expr '&' expr
  114     | expr AND_OP expr
  115     | expr OR_OP expr
  116     | expr '=' expr

  117 indexing: '[' expr ']'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 91
'%' (37) 100
'&' (38) 113
'(' (40) 21 56 59 68 79 81 96
')' (41) 21 56 59 68 79 81 96
'*' (42) 67 97 98
'+' (43) 101
',' (44) 28 47 62 86
'-' (45) 93 102
'.' (46) 90
'/' (47) 99
':' (58) 17
';' (59) 18 19 33 34 45 49 50 51 52 53 61
'<' (60) 106
'=' (61) 75 116
'>' (62) 105
'[' (91) 66 117
']' (93) 66 117
'^' (94) 112
'{' (123) 30 35
'|' (124) 111
'}' (125) 30 35
'~' (126) 92
error (256) 11
OR_OP (258) 115
AND_OP (259) 114
EQ_OP (260) 109
NE_OP (261) 110
LE_OP (262) 107
GE_OP (263) 108
LSHFT_OP (264) 103
RSHFT_OP (265) 104
INC_OP (266) 94
DEC_OP (267) 95
TYPEDEF (268) 48
EXTERN (269)
STATIC (270)
AUTO (271)
REGISTER (272)
CHAR (273) 71
SHORT (274)
INT (275) 69
LONG (276)
SIGNED (277)
UNSIGNED (278)
FLOAT (279) 70
DOUBLE (280)
CONST (281)
VOLATILE (282)
VOID (283) 72
STRUCT (284) 37
UNION (285) 38
ENUM (286)
ELLIPSIS (287)
CASE (288)
DEFAULT (289)
SWITCH (290)
WHILE (291) 56
DO (292)
FOR (293)
GOTO (294) 53
CONTINUE (295) 51
BREAK (296) 52
RETURN (297) 18 19
SIZEOF (298)
CONSTANT (299) 66 77
IDENTIFIER (300) 17 24 39 46 47 48 53 65 78 82 90
ALIAS_NAME (301) 74
DEREF (302)
UMINUS (303)
IF (304) 59
ELSE (305) 60


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
input (75)
    on left: 1 2, on right: 0 2
global_statement (76)
    on left: 3 4 5, on right: 2
body (77)
    on left: 6 7, on right: 6 30
body_statement (78)
    on left: 8 9 10 11 12 13 14 15 16, on right: 6 55 57 58
label_stmt (79)
    on left: 17, on right: 15
return_statement (80)
    on left: 18 19, on right: 16
function_definition (81)
    on left: 20, on right: 5
func_head (82)
    on left: 21, on right: 20
begin_params (83)
    on left: 22, on right: 21
end_params (84)
    on left: 23, on right: 21
res_id (85)
    on left: 24, on right: 21
param_decl_list (86)
    on left: 25 26, on right: 21
param_list (87)
    on left: 27 28, on right: 25 28
param_decl (88)
    on left: 29, on right: 27 28
block_statement (89)
    on left: 30, on right: 14 20
begin_sub (90)
    on left: 31, on right: 30
end_sub (91)
    on left: 32, on right: 30
type_definition (92)
    on left: 33 34, on right: 4
compound_type (93)
    on left: 35 36, on right: 34 73
type_type (94)
    on left: 37 38, on right: 35 36
ctype_name (95)
    on left: 39, on right: 36 41
opt_ctype_name (96)
    on left: 40 41, on right: 35
member_decl_list (97)
    on left: 42, on right: 35 44
opt_member_decl_list (98)
    on left: 43 44, on right: 42
member_decl (99)
    on left: 45, on right: 42
id_list (100)
    on left: 46 47, on right: 45 47
aliasing (101)
    on left: 48, on right: 33
expression_statement (102)
    on left: 49 50, on right: 10
jump_statement (103)
    on left: 51 52 53, on right: 9
iterative_statement (104)
    on left: 54, on right: 13
while_loop (105)
    on left: 55, on right: 54
while_clause (106)
    on left: 56, on right: 55
selection_statement (107)
    on left: 57 58, on right: 12
if_clause (108)
    on left: 59, on right: 57 58
else_clause (109)
    on left: 60, on right: 58
declaration_statement (110)
    on left: 61, on right: 3 8
var_dlist (111)
    on left: 62 63, on right: 61 62
var_definition (112)
    on left: 64, on right: 62 63
symbol_name (113)
    on left: 65 66 67 68, on right: 29 64 66 67 68
type_name (114)
    on left: 69 70 71 72 73 74, on right: 24 29 45 48 61 96
opt_init (115)
    on left: 75 76, on right: 64
primary_expr (116)
    on left: 77 78 79 80, on right: 88
function_call (117)
    on left: 81, on right: 80
func_name (118)
    on left: 82, on right: 81
actual_params_list (119)
    on left: 83 84, on right: 81
actual_params (120)
    on left: 85 86, on right: 83 86
eval_expr (121)
    on left: 87, on right: 18 85 86
expr (122)
    on left: 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
    105 106 107 108 109 110 111 112 113 114 115 116, on right: 49 56
    59 75 79 87 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
    105 106 107 108 109 110 111 112 113 114 115 116 117
indexing (123)
    on left: 117, on right: 89


state 0

    0 $accept: . input $end

    TYPEDEF     shift, and go to state 1
    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    VOID        shift, and go to state 5
    STRUCT      shift, and go to state 6
    UNION       shift, and go to state 7
    ALIAS_NAME  shift, and go to state 8

    $default  reduce using rule 1 (input)

    input                  go to state 9
    global_statement       go to state 10
    function_definition    go to state 11
    func_head              go to state 12
    res_id                 go to state 13
    type_definition        go to state 14
    compound_type          go to state 15
    type_type              go to state 16
    aliasing               go to state 17
    declaration_statement  go to state 18
    type_name              go to state 19


state 1

   48 aliasing: TYPEDEF . type_name IDENTIFIER

    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    VOID        shift, and go to state 5
    STRUCT      shift, and go to state 6
    UNION       shift, and go to state 7
    ALIAS_NAME  shift, and go to state 8

    compound_type  go to state 20
    type_type      go to state 16
    type_name      go to state 21


state 2

   71 type_name: CHAR .

    $default  reduce using rule 71 (type_name)


state 3

   69 type_name: INT .

    $default  reduce using rule 69 (type_name)


state 4

   70 type_name: FLOAT .

    $default  reduce using rule 70 (type_name)


state 5

   72 type_name: VOID .

    $default  reduce using rule 72 (type_name)


state 6

   37 type_type: STRUCT .

    $default  reduce using rule 37 (type_type)


state 7

   38 type_type: UNION .

    $default  reduce using rule 38 (type_type)


state 8

   74 type_name: ALIAS_NAME .

    $default  reduce using rule 74 (type_name)


state 9

    0 $accept: input . $end

    $end  shift, and go to state 22


state 10

    2 input: global_statement . input

    TYPEDEF     shift, and go to state 1
    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    VOID        shift, and go to state 5
    STRUCT      shift, and go to state 6
    UNION       shift, and go to state 7
    ALIAS_NAME  shift, and go to state 8

    $default  reduce using rule 1 (input)

    input                  go to state 23
    global_statement       go to state 10
    function_definition    go to state 11
    func_head              go to state 12
    res_id                 go to state 13
    type_definition        go to state 14
    compound_type          go to state 15
    type_type              go to state 16
    aliasing               go to state 17
    declaration_statement  go to state 18
    type_name              go to state 19


state 11

    5 global_statement: function_definition .

    $default  reduce using rule 5 (global_statement)


state 12

   20 function_definition: func_head . block_statement

    $default  reduce using rule 31 (begin_sub)

    block_statement  go to state 24
    begin_sub        go to state 25


state 13

   21 func_head: res_id . begin_params '(' param_decl_list ')' end_params

    $default  reduce using rule 22 (begin_params)

    begin_params  go to state 26


state 14

    4 global_statement: type_definition .

    $default  reduce using rule 4 (global_statement)


state 15

   34 type_definition: compound_type . ';'
   73 type_name: compound_type .

    ';'  shift, and go to state 27

    $default  reduce using rule 73 (type_name)


state 16

   35 compound_type: type_type . opt_ctype_name '{' member_decl_list '}'
   36              | type_type . ctype_name

    IDENTIFIER  shift, and go to state 28

    $default  reduce using rule 40 (opt_ctype_name)

    ctype_name      go to state 29
    opt_ctype_name  go to state 30


state 17

   33 type_definition: aliasing . ';'

    ';'  shift, and go to state 31


state 18

    3 global_statement: declaration_statement .

    $default  reduce using rule 3 (global_statement)


state 19

   24 res_id: type_name . IDENTIFIER
   61 declaration_statement: type_name . var_dlist ';'

    IDENTIFIER  shift, and go to state 32
    '*'         shift, and go to state 33
    '('         shift, and go to state 34

    var_dlist       go to state 35
    var_definition  go to state 36
    symbol_name     go to state 37


state 20

   73 type_name: compound_type .

    $default  reduce using rule 73 (type_name)


state 21

   48 aliasing: TYPEDEF type_name . IDENTIFIER

    IDENTIFIER  shift, and go to state 38


state 22

    0 $accept: input $end .

    $default  accept


state 23

    2 input: global_statement input .

    $default  reduce using rule 2 (input)


state 24

   20 function_definition: func_head block_statement .

    $default  reduce using rule 20 (function_definition)


state 25

   30 block_statement: begin_sub . '{' body '}' end_sub

    '{'  shift, and go to state 39


state 26

   21 func_head: res_id begin_params . '(' param_decl_list ')' end_params

    '('  shift, and go to state 40


state 27

   34 type_definition: compound_type ';' .

    $default  reduce using rule 34 (type_definition)


state 28

   39 ctype_name: IDENTIFIER .

    $default  reduce using rule 39 (ctype_name)


state 29

   36 compound_type: type_type ctype_name .
   41 opt_ctype_name: ctype_name .

    '{'       reduce using rule 41 (opt_ctype_name)
    $default  reduce using rule 36 (compound_type)


state 30

   35 compound_type: type_type opt_ctype_name . '{' member_decl_list '}'

    '{'  shift, and go to state 41


state 31

   33 type_definition: aliasing ';' .

    $default  reduce using rule 33 (type_definition)


state 32

   24 res_id: type_name IDENTIFIER .
   65 symbol_name: IDENTIFIER .

    '('       reduce using rule 24 (res_id)
    $default  reduce using rule 65 (symbol_name)


state 33

   67 symbol_name: '*' . symbol_name

    IDENTIFIER  shift, and go to state 42
    '*'         shift, and go to state 33
    '('         shift, and go to state 34

    symbol_name  go to state 43


state 34

   68 symbol_name: '(' . symbol_name ')'

    IDENTIFIER  shift, and go to state 42
    '*'         shift, and go to state 33
    '('         shift, and go to state 34

    symbol_name  go to state 44


state 35

   61 declaration_statement: type_name var_dlist . ';'

    ';'  shift, and go to state 45


state 36

   62 var_dlist: var_definition . ',' var_dlist
   63          | var_definition .

    ','  shift, and go to state 46

    $default  reduce using rule 63 (var_dlist)


state 37

   64 var_definition: symbol_name . opt_init
   66 symbol_name: symbol_name . '[' CONSTANT ']'

    '='  shift, and go to state 47
    '['  shift, and go to state 48

    $default  reduce using rule 76 (opt_init)

    opt_init  go to state 49


state 38

   48 aliasing: TYPEDEF type_name IDENTIFIER .

    $default  reduce using rule 48 (aliasing)


state 39

   30 block_statement: begin_sub '{' . body '}' end_sub

    error       shift, and go to state 50
    INC_OP      shift, and go to state 51
    DEC_OP      shift, and go to state 52
    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    VOID        shift, and go to state 5
    STRUCT      shift, and go to state 6
    UNION       shift, and go to state 7
    WHILE       shift, and go to state 53
    GOTO        shift, and go to state 54
    CONTINUE    shift, and go to state 55
    BREAK       shift, and go to state 56
    RETURN      shift, and go to state 57
    CONSTANT    shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    ALIAS_NAME  shift, and go to state 8
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '!'         shift, and go to state 62
    '~'         shift, and go to state 63
    IF          shift, and go to state 64
    ';'         shift, and go to state 65
    '('         shift, and go to state 66

    '{'  reduce using rule 31 (begin_sub)
    '}'  reduce using rule 7 (body)

    body                   go to state 67
    body_statement         go to state 68
    label_stmt             go to state 69
    return_statement       go to state 70
    block_statement        go to state 71
    begin_sub              go to state 25
    compound_type          go to state 20
    type_type              go to state 16
    expression_statement   go to state 72
    jump_statement         go to state 73
    iterative_statement    go to state 74
    while_loop             go to state 75
    while_clause           go to state 76
    selection_statement    go to state 77
    if_clause              go to state 78
    declaration_statement  go to state 79
    type_name              go to state 80
    primary_expr           go to state 81
    function_call          go to state 82
    func_name              go to state 83
    expr                   go to state 84


state 40

   21 func_head: res_id begin_params '(' . param_decl_list ')' end_params

    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    VOID        shift, and go to state 5
    STRUCT      shift, and go to state 6
    UNION       shift, and go to state 7
    ALIAS_NAME  shift, and go to state 8

    $default  reduce using rule 26 (param_decl_list)

    param_decl_list  go to state 85
    param_list       go to state 86
    param_decl       go to state 87
    compound_type    go to state 20
    type_type        go to state 16
    type_name        go to state 88


state 41

   35 compound_type: type_type opt_ctype_name '{' . member_decl_list '}'

    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    VOID        shift, and go to state 5
    STRUCT      shift, and go to state 6
    UNION       shift, and go to state 7
    ALIAS_NAME  shift, and go to state 8

    compound_type     go to state 20
    type_type         go to state 16
    member_decl_list  go to state 89
    member_decl       go to state 90
    type_name         go to state 91


state 42

   65 symbol_name: IDENTIFIER .

    $default  reduce using rule 65 (symbol_name)


state 43

   66 symbol_name: symbol_name . '[' CONSTANT ']'
   67            | '*' symbol_name .

    '['  shift, and go to state 48

    $default  reduce using rule 67 (symbol_name)


state 44

   66 symbol_name: symbol_name . '[' CONSTANT ']'
   68            | '(' symbol_name . ')'

    ')'  shift, and go to state 92
    '['  shift, and go to state 48


state 45

   61 declaration_statement: type_name var_dlist ';' .

    $default  reduce using rule 61 (declaration_statement)


state 46

   62 var_dlist: var_definition ',' . var_dlist

    IDENTIFIER  shift, and go to state 42
    '*'         shift, and go to state 33
    '('         shift, and go to state 34

    var_dlist       go to state 93
    var_definition  go to state 36
    symbol_name     go to state 37


state 47

   75 opt_init: '=' . expr

    INC_OP      shift, and go to state 51
    DEC_OP      shift, and go to state 52
    CONSTANT    shift, and go to state 58
    IDENTIFIER  shift, and go to state 94
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '!'         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 66

    primary_expr   go to state 81
    function_call  go to state 82
    func_name      go to state 83
    expr           go to state 95


state 48

   66 symbol_name: symbol_name '[' . CONSTANT ']'

    CONSTANT  shift, and go to state 96


state 49

   64 var_definition: symbol_name opt_init .

    $default  reduce using rule 64 (var_definition)


state 50

   11 body_statement: error .

    $default  reduce using rule 11 (body_statement)


state 51

   94 expr: INC_OP . expr

    INC_OP      shift, and go to state 51
    DEC_OP      shift, and go to state 52
    CONSTANT    shift, and go to state 58
    IDENTIFIER  shift, and go to state 94
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '!'         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 66

    primary_expr   go to state 81
    function_call  go to state 82
    func_name      go to state 83
    expr           go to state 97


state 52

   95 expr: DEC_OP . expr

    INC_OP      shift, and go to state 51
    DEC_OP      shift, and go to state 52
    CONSTANT    shift, and go to state 58
    IDENTIFIER  shift, and go to state 94
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '!'         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 66

    primary_expr   go to state 81
    function_call  go to state 82
    func_name      go to state 83
    expr           go to state 98


state 53

   56 while_clause: WHILE . '(' expr ')'

    '('  shift, and go to state 99


state 54

   53 jump_statement: GOTO . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 100


state 55

   51 jump_statement: CONTINUE . ';'

    ';'  shift, and go to state 101


state 56

   52 jump_statement: BREAK . ';'

    ';'  shift, and go to state 102


state 57

   18 return_statement: RETURN . eval_expr ';'
   19                 | RETURN . ';'

    INC_OP      shift, and go to state 51
    DEC_OP      shift, and go to state 52
    CONSTANT    shift, and go to state 58
    IDENTIFIER  shift, and go to state 94
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '!'         shift, and go to state 62
    '~'         shift, and go to state 63
    ';'         shift, and go to state 103
    '('         shift, and go to state 66

    primary_expr   go to state 81
    function_call  go to state 82
    func_name      go to state 83
    eval_expr      go to state 104
    expr           go to state 105


state 58

   77 primary_expr: CONSTANT .

    $default  reduce using rule 77 (primary_expr)


state 59

   17 label_stmt: IDENTIFIER . ':'
   78 primary_expr: IDENTIFIER .
   82 func_name: IDENTIFIER .

    ':'  shift, and go to state 106

    '('       reduce using rule 82 (func_name)
    $default  reduce using rule 78 (primary_expr)


state 60

   93 expr: '-' . expr

    INC_OP      shift, and go to state 51
    DEC_OP      shift, and go to state 52
    CONSTANT    shift, and go to state 58
    IDENTIFIER  shift, and go to state 94
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '!'         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 66

    primary_expr   go to state 81
    function_call  go to state 82
    func_name      go to state 83
    expr           go to state 107


state 61

   97 expr: '*' . expr

    INC_OP      shift, and go to state 51
    DEC_OP      shift, and go to state 52
    CONSTANT    shift, and go to state 58
    IDENTIFIER  shift, and go to state 94
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '!'         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 66

    primary_expr   go to state 81
    function_call  go to state 82
    func_name      go to state 83
    expr           go to state 108


state 62

   91 expr: '!' . expr

    INC_OP      shift, and go to state 51
    DEC_OP      shift, and go to state 52
    CONSTANT    shift, and go to state 58
    IDENTIFIER  shift, and go to state 94
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '!'         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 66

    primary_expr   go to state 81
    function_call  go to state 82
    func_name      go to state 83
    expr           go to state 109


state 63

   92 expr: '~' . expr

    INC_OP      shift, and go to state 51
    DEC_OP      shift, and go to state 52
    CONSTANT    shift, and go to state 58
    IDENTIFIER  shift, and go to state 94
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '!'         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 66

    primary_expr   go to state 81
    function_call  go to state 82
    func_name      go to state 83
    expr           go to state 110


state 64

   59 if_clause: IF . '(' expr ')'

    '('  shift, and go to state 111


state 65

   50 expression_statement: ';' .

    $default  reduce using rule 50 (expression_statement)


state 66

   79 primary_expr: '(' . expr ')'
   96 expr: '(' . type_name ')' expr

    INC_OP      shift, and go to state 51
    DEC_OP      shift, and go to state 52
    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    VOID        shift, and go to state 5
    STRUCT      shift, and go to state 6
    UNION       shift, and go to state 7
    CONSTANT    shift, and go to state 58
    IDENTIFIER  shift, and go to state 94
    ALIAS_NAME  shift, and go to state 8
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '!'         shift, and go to state 62
    '~'         shift, and go to state 63
    '('         shift, and go to state 66

    compound_type  go to state 20
    type_type      go to state 16
    type_name      go to state 112
    primary_expr   go to state 81
    function_call  go to state 82
    func_name      go to state 83
    expr           go to state 113


state 67

   30 block_statement: begin_sub '{' body . '}' end_sub

    '}'  shift, and go to state 114


state 68

    6 body: body_statement . body

    error       shift, and go to state 50
    INC_OP      shift, and go to state 51
    DEC_OP      shift, and go to state 52
    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    VOID        shift, and go to state 5
    STRUCT      shift, and go to state 6
    UNION       shift, and go to state 7
    WHILE       shift, and go to state 53
    GOTO        shift, and go to state 54
    CONTINUE    shift, and go to state 55
    BREAK       shift, and go to state 56
    RETURN      shift, and go to state 57
    CONSTANT    shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    ALIAS_NAME  shift, and go to state 8
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '!'         shift, and go to state 62
    '~'         shift, and go to state 63
    IF          shift, and go to state 64
    ';'         shift, and go to state 65
    '('         shift, and go to state 66

    '{'  reduce using rule 31 (begin_sub)
    '}'  reduce using rule 7 (body)

    body                   go to state 115
    body_statement         go to state 68
    label_stmt             go to state 69
    return_statement       go to state 70
    block_statement        go to state 71
    begin_sub              go to state 25
    compound_type          go to state 20
    type_type              go to state 16
    expression_statement   go to state 72
    jump_statement         go to state 73
    iterative_statement    go to state 74
    while_loop             go to state 75
    while_clause           go to state 76
    selection_statement    go to state 77
    if_clause              go to state 78
    declaration_statement  go to state 79
    type_name              go to state 80
    primary_expr           go to state 81
    function_call          go to state 82
    func_name              go to state 83
    expr                   go to state 84


state 69

   15 body_statement: label_stmt .

    $default  reduce using rule 15 (body_statement)


state 70

   16 body_statement: return_statement .

    $default  reduce using rule 16 (body_statement)


state 71

   14 body_statement: block_statement .

    $default  reduce using rule 14 (body_statement)


state 72

   10 body_statement: expression_statement .

    $default  reduce using rule 10 (body_statement)


state 73

    9 body_statement: jump_statement .

    $default  reduce using rule 9 (body_statement)


state 74

   13 body_statement: iterative_statement .

    $default  reduce using rule 13 (body_statement)


state 75

   54 iterative_statement: while_loop .

    $default  reduce using rule 54 (iterative_statement)


state 76

   55 while_loop: while_clause . body_statement

    error       shift, and go to state 50
    INC_OP      shift, and go to state 51
    DEC_OP      shift, and go to state 52
    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    VOID        shift, and go to state 5
    STRUCT      shift, and go to state 6
    UNION       shift, and go to state 7
    WHILE       shift, and go to state 53
    GOTO        shift, and go to state 54
    CONTINUE    shift, and go to state 55
    BREAK       shift, and go to state 56
    RETURN      shift, and go to state 57
    CONSTANT    shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    ALIAS_NAME  shift, and go to state 8
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '!'         shift, and go to state 62
    '~'         shift, and go to state 63
    IF          shift, and go to state 64
    ';'         shift, and go to state 65
    '('         shift, and go to state 66

    '{'  reduce using rule 31 (begin_sub)

    body_statement         go to state 116
    label_stmt             go to state 69
    return_statement       go to state 70
    block_statement        go to state 71
    begin_sub              go to state 25
    compound_type          go to state 20
    type_type              go to state 16
    expression_statement   go to state 72
    jump_statement         go to state 73
    iterative_statement    go to state 74
    while_loop             go to state 75
    while_clause           go to state 76
    selection_statement    go to state 77
    if_clause              go to state 78
    declaration_statement  go to state 79
    type_name              go to state 80
    primary_expr           go to state 81
    function_call          go to state 82
    func_name              go to state 83
    expr                   go to state 84


state 77

   12 body_statement: selection_statement .

    $default  reduce using rule 12 (body_statement)


state 78

   57 selection_statement: if_clause . body_statement
   58                    | if_clause . body_statement else_clause body_statement

    error       shift, and go to state 50
    INC_OP      shift, and go to state 51
    DEC_OP      shift, and go to state 52
    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    VOID        shift, and go to state 5
    STRUCT      shift, and go to state 6
    UNION       shift, and go to state 7
    WHILE       shift, and go to state 53
    GOTO        shift, and go to state 54
    CONTINUE    shift, and go to state 55
    BREAK       shift, and go to state 56
    RETURN      shift, and go to state 57
    CONSTANT    shift, and go to state 58
    IDENTIFIER  shift, and go to state 59
    ALIAS_NAME  shift, and go to state 8
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '!'         shift, and go to state 62
    '~'         shift, and go to state 63
    IF          shift, and go to state 64
    ';'         shift, and go to state 65
    '('         shift, and go to state 66

    '{'  reduce using rule 31 (begin_sub)

    body_statement         go to state 117
    label_stmt             go to state 69
    return_statement       go to state 70
    block_statement        go to state 71
    begin_sub              go to state 25
    compound_type          go to state 20
    type_type              go to state 16
    expression_statement   go to state 72
    jump_statement         go to state 73
    iterative_statement    go to state 74
    while_loop             go to state 75
    while_clause           go to state 76
    selection_statement    go to state 77
    if_clause              go to state 78
    declaration_statement  go to state 79
    type_name              go to state 80
    primary_expr           go to state 81
    function_call          go to state 82
    func_name              go to state 83
    expr                   go to state 84


state 79

    8 body_statement: declaration_statement .

    $default  reduce using rule 8 (body_statement)


state 80

   61 declaration_statement: type_name . var_dlist ';'

    IDENTIFIER  shift, and go to state 42
    '*'         shift, and go to state 33
    '('         shift, and go to state 34

    var_dlist       go to state 35
    var_definition  go to state 36
    symbol_name     go to state 37


state 81

   88 expr: primary_expr .

    $default  reduce using rule 88 (expr)


state 82

   80 primary_expr: function_call .

    $default  reduce using rule 80 (primary_expr)


state 83

   81 function_call: func_name . '(' actual_params_list ')'

    '('  shift, and go to state 118


state 84

   49 expression_statement: expr . ';'
   89 expr: expr . indexing
   90     | expr . '.' IDENTIFIER
   98     | expr . '*' expr
   99     | expr . '/' expr
  100     | expr . '%' expr
  101     | expr . '+' expr
  102     | expr . '-' expr
  103     | expr . LSHFT_OP expr
  104     | expr . RSHFT_OP expr
  105     | expr . '>' expr
  106     | expr . '<' expr
  107     | expr . LE_OP expr
  108     | expr . GE_OP expr
  109     | expr . EQ_OP expr
  110     | expr . NE_OP expr
  111     | expr . '|' expr
  112     | expr . '^' expr
  113     | expr . '&' expr
  114     | expr . AND_OP expr
  115     | expr . OR_OP expr
  116     | expr . '=' expr

    OR_OP     shift, and go to state 119
    AND_OP    shift, and go to state 120
    EQ_OP     shift, and go to state 121
    NE_OP     shift, and go to state 122
    LE_OP     shift, and go to state 123
    GE_OP     shift, and go to state 124
    LSHFT_OP  shift, and go to state 125
    RSHFT_OP  shift, and go to state 126
    '='       shift, and go to state 127
    '&'       shift, and go to state 128
    '^'       shift, and go to state 129
    '|'       shift, and go to state 130
    '<'       shift, and go to state 131
    '>'       shift, and go to state 132
    '-'       shift, and go to state 133
    '+'       shift, and go to state 134
    '*'       shift, and go to state 135
    '/'       shift, and go to state 136
    '%'       shift, and go to state 137
    '.'       shift, and go to state 138
    '['       shift, and go to state 139
    ';'       shift, and go to state 140

    indexing  go to state 141


state 85

   21 func_head: res_id begin_params '(' param_decl_list . ')' end_params

    ')'  shift, and go to state 142


state 86

   25 param_decl_list: param_list .
